--- a/styles/social.contact.css
+++ b/styles/social.contact.css
@@ -5,7 +5,7 @@
 	align-items: center;
 	justify-content: center;
 	gap: 20px;
-	background: rgb(255, 255, 255);
+	background: #1a1f2c;
 	padding: 20px 25px;
 	border-radius: 14px;
   }
@@ -52,14 +52,33 @@
   .github .BG {
 	background: #181818;
   }
-  .linkdin .BG {
-	background: #0077b5;
+  .twitter-x .BG {
+	background: #181818;
   }
   .whatsapp .BG {
-	background: #075e54;
+	background: #25d366;
   }
-  .discord .BG {
-	background: #7289da;
+  .reddit .BG {
+	background: #ff4500;
+  }
+  .instagram .BG {
+	/* background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+	background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+	background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);; */
+	background: radial-gradient(circle farthest-corner at 35% 90%, #fec564, transparent 50%),
+                radial-gradient(circle farthest-corner at 0 140%, #fec564, transparent 50%),
+                radial-gradient(ellipse farthest-corner at 0 -25%, #5258cf, transparent 50%),
+                radial-gradient(ellipse farthest-corner at 20% -50%, #5258cf, transparent 50%),
+                radial-gradient(ellipse farthest-corner at 100% 0, #893dc2, transparent 50%),
+                radial-gradient(ellipse farthest-corner at 60% -20%, #893dc2, transparent 50%),
+                radial-gradient(ellipse farthest-corner at 100% 100%, #d9317a, transparent),
+                linear-gradient(#6559ca, #bc318f 30%, #e33f5f 50%, #f77638 70%, #fec66d 100%);
+  }
+  .yt .BG {
+	background: #ff0000;
+  }
+  .tele .BG {
+	background: #3390ec;
   }
   .Btn:hover .BG {
 	transform: scale(1.5);
